[package]
name = "quent-instrumentation-build"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
convert_case = "0.8"
prettyplease = "0.2"
proc-macro2 = "1"
quent-constraints = { path = "../constraints" }
quent-schema = { path = "../schema" }
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
thiserror.workspace = true

[dev-dependencies]
quent-schema = { path = "../schema", features = ["test-utils"] }
