[package]
name = "quent-time"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[features]
default = []
ts = ["ts-rs", "serde"]
# Internal: timestamp() override for the deterministic event emitter.
__test-clock-override = []

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
